[B]1.2.1[/B]
- Changed Video watched/unwatched/partiallywatched flags to match iOS style flags

[B]1.2.0[/B]
- Skin now coded in 720p.
- Added support artwork.downloader, globalsearch and artistslideshow scripts (Eden build only).
- Added support of PseudoTV (Eden build only).
- Added Rollback button to addon info screen, to allow rolling back to previous versions of addons (Eden build only).
- Added Peripheral settings support. (Eden build only).
- Added video info to "List" view, now matches "List2" view.
- Added support for extrafanarts/ and season level fanart for TV Shows. (Eden build only)
- New horizontal Home menu, skin defaults to old vertical menu. (Eden build only)
- Lots of work on music visualisation/karaoke screens, including support for ArtistSlideshow script where appropriate.
- Cleanup of video OSD screens, hopefully better layed out while reducing on screen footprint.
- Major refactor of system menu.
- Cleanup of a number of screens to improve navigation.
- Fix to allow video info for a playing video.
- And as always, fixed a large number of bugs.

[B]1.1.1[/B]
- Post update bug fixes (lots of them).
- Unifying release, Release for XBMC Dharma, XBMC pre Eden and Xbox builds.

[B]1.1.0[/B]
- Added support for TVTunes, LogoDownloader scripts.
- Added support for Weather Plus plugin.
- Greatly expanded library entry point support (now supports Movies, TV, Music Videos and Music libraries).
- Changed skin settings to match other settings menus.
- Custom Playlists and scripts now available from home menu.
- Can now select if static or animated weather icons used.
- Cleaned up a number of skin graphics, removed and renamed a number of images.
- Cleanup of sound support in the skin (fixed a number of sound files).
- A number of dialogs have been made full screen (should not be any remaining lable overflow problems).
- Fixed a large number of bugs.
- Code cleanup/optimisations (hopefully a lot quicker now).