@@ -1,5 +1,6 @@
 [B]1.2.1[/B]
 - Changed Video watched/unwatched/partiallywatched flags to match iOS style flags
+- Extend support for clearart and logo's to Movies
 
 [B]1.2.0[/B]
 - Skin now coded in 720p.
